<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context="com.example.kean.projectstdeacons.Activities.DevActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <Spinner
        android:id="@+id/beaconNumSpnr"
        android:layout_width="123dp"
        android:layout_height="33dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp" />

    <ToggleButton
        android:id="@+id/devRangingToggler"
        android:layout_width="88dp"
        android:layout_height="48dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/beaconNumSpnr"
        android:layout_marginTop="7dp" />

    <Button
        android:id="@+id/addLocationBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_btn"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/beaconListView" />

    <ListView
        android:id="@+id/beaconListView"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_marginTop="8dp"
        android:visibility="invisible"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/devRangingToggler" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="368dp"
        android:layout_height="59dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLocationBtn">

        <TextView
            android:id="@+id/locNameTxt"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/loc_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="invisible" />

        <EditText
            android:id="@+id/locNameField"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.20"
            android:ems="10"
            android:inputType="textPersonName"
            android:visibility="invisible"
            tools:text="Location Name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="368dp"
        android:layout_height="55dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="17dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/locPlaceTxt"
            android:layout_width="wrap_content"
            android:layout_height="33dp"
            android:text="@string/loc_place"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:visibility="invisible" />

    </LinearLayout>

    <TextView
        android:id="@+id/locPlacePointTxt"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_weight="1"
        android:visibility="invisible"
        tools:layout_editor_absoluteX="49dp"
        tools:layout_editor_absoluteY="-39dp" />

    <ListView
        android:id="@+id/locListView"
        android:layout_width="344dp"
        android:layout_height="69dp"
        android:layout_marginBottom="75dp"
        android:layout_marginEnd="24dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="8dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</android.support.constraint.ConstraintLayout>
